--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@auth/prisma-adapter": "^2.5.0",
     "@prisma/client": "^5.19.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "ai": "^3.4.0",
     "class-variance-authority": "^0.7.0",
