--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@stripe/stripe-js": "^4.6.0",
     "@upstash/redis": "^1.34.0",
     "ai": "^3.4.0",
     "class-variance-authority": "^0.7.0",
@@ -27,6 +28,7 @@
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.5",
+    "stripe": "^16.12.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
